--- a/components.html
+++ b/components.html
@@ -7,10 +7,7 @@
     <title>Generazioni Esami | Sign Up</title>
     <link rel="stylesheet" href="./css/basic.css" />
     <link rel="stylesheet" href="./css/components.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
-    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   </head>
   <body>
     <nav>
@@ -54,18 +51,26 @@
 
     <!-- ------------------------------------------ question-block ------------------------------------------------ -->
 
-    <div class="question-wrapper difficult">
+    <div class="question-wrapper">
       <div>
         <div>
           <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
           <h6>Oct, 8, 2020</h6>
         </div>
-        <i class="bi bi-three-dots-vertical"></i>
+        <div class="dropdown">
+          <button></button>
+
+          <!-- Options -->
+          <ul>
+            <li><span>Edit</span><i class="material-icons">create</i></li>
+            <li><span>Delete</span><i class="material-icons">delete</i></li>
+          </ul>
+        </div>
       </div>
       <p>
-        Sulla base di quanto studiato in classe, spiega il concetto di popolo in
-        ottica romantica, facendo un paragone tra il Romanticismo e le visioni
-        delle correnti fondamentale del Primo Ottocento.
+        Sulla base di quanto studiato in classe, spiega il concetto di popolo
+        in ottica romantica, facendo un paragone tra il Romanticismo e le
+        visioni delle correnti fondamentale del Primo Ottocento.
       </p>
       <div>
         <h5>
@@ -76,23 +81,23 @@
         <h5><strong>Durata:</strong> 15min</h5>
       </div>
     </div>
-
+    
     <!-- ------------------------------------------ container ------------------------------------------------ -->
 
     <div class="container">
-      <div class="question-wrapper difficult">
+      <div class="question-wrapper">
         <div>
           <div>
             <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
             <h6>Oct, 8, 2020</h6>
           </div>
           <div class="dropdown">
-            <button><i class="bi bi-three-dots-vertical"></i></button>
+            <button></button>
 
             <!-- Options -->
             <ul>
-              <li>Edit</li>
-              <li>Delete</li>
+              <li><span>Edit</span><i class="material-icons">create</i></li>
+              <li><span>Delete</span><i class="material-icons">delete</i></li>
             </ul>
           </div>
         </div>
@@ -110,35 +115,21 @@
           <h5><strong>Durata:</strong> 15min</h5>
         </div>
       </div>
-      <div class="question-wrapper easy">
+      <div class="question-wrapper">
         <div>
           <div>
             <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
             <h6>Oct, 8, 2020</h6>
           </div>
-          <i class="bi bi-three-dots-vertical"></i>
-        </div>
-        <p>
-          Sulla base di quanto studiato in classe, spiega il concetto di popolo
-          in ottica romantica, facendo un paragone tra il Romanticismo e le
-          visioni delle correnti fondamentale del Primo Ottocento.
-        </p>
-        <div>
-          <h5>
-            <span class="level easy"></span>
-            <strong>Livello:</strong>
-            <span>Facile</span>
-          </h5>
-          <h5><strong>Durata:</strong> 15min</h5>
-        </div>
-      </div>
-      <div class="question-wrapper medium">
-        <div>
-          <div>
-            <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
-            <h6>Oct, 8, 2020</h6>
+          <div class="dropdown">
+            <button></button>
+
+            <!-- Options -->
+            <ul>
+              <li><span>Edit</span><i class="material-icons">create</i></li>
+              <li><span>Delete</span><i class="material-icons">delete</i></li>
+            </ul>
           </div>
-          <i class="bi bi-three-dots-vertical"></i>
         </div>
         <p>
           Sulla base di quanto studiato in classe, spiega il concetto di popolo
@@ -149,7 +140,37 @@
           <h5>
             <span class="level medium"></span>
             <strong>Livello:</strong>
-            <span>Medio</span>
+            <span>Difficile</span>
+          </h5>
+          <h5><strong>Durata:</strong> 15min</h5>
+        </div>
+      </div>
+      <div class="question-wrapper">
+        <div>
+          <div>
+            <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
+            <h6>Oct, 8, 2020</h6>
+          </div>
+          <div class="dropdown">
+            <button></button>
+
+            <!-- Options -->
+            <ul>
+              <li><span>Edit</span><i class="material-icons">create</i></li>
+              <li><span>Delete</span><i class="material-icons">delete</i></li>
+            </ul>
+          </div>
+        </div>
+        <p>
+          Sulla base di quanto studiato in classe, spiega il concetto di popolo
+          in ottica romantica, facendo un paragone tra il Romanticismo e le
+          visioni delle correnti fondamentale del Primo Ottocento.
+        </p>
+        <div>
+          <h5>
+            <span class="level easy"></span>
+            <strong>Livello:</strong>
+            <span>Difficile</span>
           </h5>
           <h5><strong>Durata:</strong> 15min</h5>
         </div>
