--- a/anni.html
+++ b/anni.html
@@ -35,150 +35,184 @@
 
     <!-- Nav-Bar - END -->
 
-    <div class="container flex">
-      <div class="flex-1">
-        <h1 class="text-center">Settori ITI</h1>
-        <div class="buttons-wrapper m-vertical">
-          <a href="#open-anno-iti-modal">
-            <button class="btn btn-secondary">
-              <i class="material-icons">add</i>
-              Nuovo Settore
-            </button>
-          </a>
-        </div>
-        <div class="flex-1 flex-wrapper">
-          <div class="removable-block">
-            <span>1 ITI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>2 ITI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>3 ITI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>1 ITI M</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>2 ITI M</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>3 ITI M</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-        </div>
+    <div class="container">
+      <div class="buttons-wrapper m-vertical">
+        <a href="#sectors-modal-add">
+          <button class="btn btn-secondary">
+            <i class="material-icons">add</i>
+            Aggiungi
+          </button>
+        </a>
+        <a href="#sectors-modal-modify">
+          <button class="btn btn-secondary">
+            <i class="material-icons">settings</i>
+            Modifica
+          </button>
+        </a>
       </div>
-      <div class="divider vertical"></div>
-      <div class="flex-1">
-        <h1 class="text-center">Settori IPI</h1>
-        <div class="buttons-wrapper m-vertical">
-          <a href="#open-anno-ipi-modal">
-            <button class="btn btn-secondary">
-              <i class="material-icons">add</i>
-              Nuovo Settore
-            </button>
-          </a>
+      <div class="flex">
+        <div class="flex-1">
+          <h1 class="text-center m-vertical">Settori ITI</h1>
+          <div class="flex-1 flex-wrapper">
+            <div class="removable-block">
+              <span>1 ITI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 ITI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 ITI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 ITI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 ITI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 ITI M</span>
+            </div>
+          </div>
         </div>
-        <div class="flex-1 flex-wrapper">
-          <div class="removable-block">
-            <span>1 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>2 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>3 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>1 IPI M</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>2 IPI M</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>3 IPI M</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
+        <div class="divider vertical"></div>
+        <div class="flex-1">
+          <h1 class="text-center m-vertical">Settori IPI</h1>
+          <div class="flex-1 flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
           </div>
         </div>
       </div>
     </div>
 
-    <!-- modal-iti-add-sector - START -->
+    <!-- sectors-modal-add - START -->
 
-    <div id="open-anno-iti-modal" class="modal-wrapper">
+    <div id="sectors-modal-add" class="modal-wrapper">
       <a href="#" class="modal-background"></a>
-      <div class="modal">
-        <h1>Nuovo Settore ITI</h1>
-        <div class="flex flex-wrapper m-vertical">
-          <div class="removable-block">
-            <span>2 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
+      <div class="modal sectors-modal">
+        <h1>Nuovi Settori</h1>
+        <!-- <div class="flex">
+          <div class="flex-1">
+            <h2 class="text-center">Settori ITI</h2>
+            <div class="flex-1 flex-wrapper sectors-iti">
+              <div class="removable-block">
+                <span>1 ITI E</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>2 ITI E</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>3 ITI E</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>1 ITI M</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>2 ITI M</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>3 ITI M</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+            </div>
           </div>
-          <div class="removable-block">
-            <span>2 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>2 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>2 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
+          <div class="divider vertical"></div>
+          <div class="flex-1">
+            <h2 class="text-center">Settori IPI</h2>
+            <div class="flex-1 flex-wrapper sectors-ipi">
+              <div class="removable-block">
+                <span>1 IPI E</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>2 IPI E</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>3 IPI E</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>1 IPI M</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>2 IPI M</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+              <div class="removable-block">
+                <span>3 IPI M</span>
+                <button class="btn-close">
+                  <i class="material-icons">close</i>
+                </button>
+              </div>
+            </div>
           </div>
         </div>
+        <div class="divider m-vertical"></div> -->
         <form>
-          <div class="input-group">
-            <input
-              type="input"
-              class="input-field"
-              name="title"
-              id="title"
-              required
-            />
-            <label for="title" class="input-label">Titolo</label>
+          <div class="flex-wrapper justify-between m-vertical">
+            <select name="anno" id="anno">
+              <option value="placeholder">Anno</option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+            <select name="tipo" id="tipo">
+              <option value="iti">ITI</option>
+              <option value="IPI">IPI</option>
+            </select>
+            <div>
+              <div class="input-group">
+                <input type="input" class="input-field" name="settore" id='settore' maxlength="2"  required />
+                <label for="settore" class="input-label">Settore</label>
+              </div>
+            </div>
           </div>
           <input type="submit" value="Conferma" class="btn" />
         </form>
@@ -186,57 +220,6 @@
       </div>
     </div>
 
-    <!-- modal-iti-add-sector - END -->
-    <!-- modal-iti-add-sector - START -->
-
-    <div id="open-anno-ipi-modal" class="modal-wrapper">
-      <a href="#" class="modal-background"></a>
-      <div class="modal">
-        <h1>Nuovo Settore IPI</h1>
-        <div class="flex flex-wrapper  m-vertical">
-          <div class="removable-block">
-            <span>2 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>2 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>2 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-          <div class="removable-block">
-            <span>2 IPI E</span>
-            <button class="btn-close">
-              <i class="material-icons">close</i>
-            </button>
-          </div>
-        </div>
-        <form>
-          <div class="input-group">
-            <input
-              type="input"
-              class="input-field"
-              name="title"
-              id="title"
-              required
-            />
-            <label for="title" class="input-label">Titolo</label>
-          </div>
-          <input type="submit" value="Conferma" class="btn" />
-        </form>
-        <a href="#" class="modal-close-btn">&times;</a>
-      </div>
-    </div>
-
-    <!-- modal-iti-add-sector - END -->
+    <!-- sectors-modal-add - END -->
   </body>
-  <script src="./script.js"></script>
 </html>
