added an initial material.html page

--- a/anni.html
+++ b/anni.html
@@ -209,7 +209,7 @@
             </select>
             <div>
               <div class="input-group">
-                <input type="input" class="input-field" name="settore" id='settore' maxlength="2"  required />
+                <input type="input" class="input-field" name="settore" id='settore' maxlength="2" />
                 <label for="settore" class="input-label">Settore</label>
               </div>
             </div>
