--- a/materie.html
+++ b/materie.html
@@ -44,6 +44,335 @@
           </button>
         </a>
       </div>
+      <div class="flex-wrapper justify-between">
+
+        <!-- subject-card components - START -->
+
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- subject-card components - END -->
+
+        <div class="card subject-card">
+          <h3 class="text-center">Storia</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Sistemi e Reti</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 ITI I</span>
+            </div>
+            <div class="removable-block">
+              <span>2 ITI I</span>
+            </div>
+            <div class="removable-block">
+              <span>3 ITI I</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Disegno</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 ITI</span>
+            </div>
+            <div class="removable-block">
+              <span>2 ITI</span>
+            </div>
+            <div class="removable-block">
+              <span>1 ITI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 ITI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 ITI M</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+        <div class="card subject-card">
+          <h3 class="text-center">Italiano</h3>
+          <div class="divider"></div>
+          <div class="flex-wrapper">
+            <div class="removable-block">
+              <span>1 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI E</span>
+            </div>
+            <div class="removable-block">
+              <span>1 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>2 IPI M</span>
+            </div>
+            <div class="removable-block">
+              <span>3 IPI M</span>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
     </div>
   </body>
 </html>
