fixed the input-group components

--- a/components.html
+++ b/components.html
@@ -32,7 +32,7 @@
     <!-- ------------------------------------------ input ------------------------------------------------ -->
 
     <div class="input-group">
-      <input type="input" class="input-field" name="name" id="name" required />
+      <input type="text" placeholder="name" class="input-field" name="name" id="name" required />
       <label for="name" class="input-label">Name</label>
     </div>
 
