--- a/home-coordinatore.html
+++ b/home-coordinatore.html
@@ -227,7 +227,7 @@
           <div class="divider"></div>
           <div class="input-group">
             <textarea
-              type="input"
+              type="text"
               class="input-field"
               name="question"
               id="question"
