--- a/home.html
+++ b/home.html
@@ -221,7 +221,7 @@
           <div class="divider"></div>
           <div class="input-group">
             <textarea
-              type="input"
+              type="text"
               class="input-field"
               name="question"
               id="question"
