--- a/login.html
+++ b/login.html
@@ -11,17 +11,31 @@
   </head>
   <body>
     <div class="card login">
-      <h1>Sign In</h1>  
+      <h1>Sign In</h1>
       <form class="login" method="get">
         <div class="input-group">
-          <input type="text" class="input-field" name="email" id='email' required />
+          <input
+            type="text"
+            placeholder="email"
+            class="input-field"
+            name="email"
+            id="email"
+            required
+          />
           <label for="email" class="input-label">Email</label>
         </div>
         <div class="input-group">
-          <input type="password" class="input-field" name="password" id='password' required />
+          <input
+            type="password"
+            placeholder="password"
+            class="input-field"
+            name="password"
+            id="password"
+            required
+          />
           <label for="password" class="input-label">Password</label>
         </div>
-        <input type="submit" class="btn" value="Login" name="login">
+        <input type="submit" class="btn" value="Login" name="login" />
       </form>
     </div>
   </body>
