modified the code of .input-group

--- a/home.html
+++ b/home.html
@@ -184,6 +184,7 @@
               </select>
               <div class="input-group">
                 <input
+                  placeholder="durata"
                   type="number"
                   class="input-field"
                   name="durata"
@@ -221,6 +222,7 @@
           <div class="divider"></div>
           <div class="input-group">
             <textarea
+              placeholder="question"
               type="text"
               class="input-field"
               name="question"
