--- a/anni.html
+++ b/anni.html
@@ -209,7 +209,14 @@
             </select>
             <div>
               <div class="input-group">
-                <input type="input" class="input-field" name="settore" id='settore' maxlength="2" />
+                <input
+                  type="text"
+                  placeholder="settore"
+                  class="input-field"
+                  name="settore"
+                  id="settore"
+                  maxlength="2"
+                />
                 <label for="settore" class="input-label">Settore</label>
               </div>
             </div>
