--- a/home-coordinatore.html
+++ b/home-coordinatore.html
@@ -190,6 +190,7 @@
               </select>
               <div class="input-group">
                 <input
+                  placeholder="durata"
                   type="number"
                   class="input-field"
                   name="durata"
