finished the materie.html page, added materie.js page and modified some styles in the other pages

--- a/components.html
+++ b/components.html
@@ -7,7 +7,10 @@
     <title>Generazioni Esami | Sign Up</title>
     <link rel="stylesheet" href="./css/basic.css" />
     <link rel="stylesheet" href="./css/components.css" />
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav>
@@ -32,7 +35,14 @@
     <!-- ------------------------------------------ input ------------------------------------------------ -->
 
     <div class="input-group">
-      <input type="text" placeholder="name" class="input-field" name="name" id="name" required />
+      <input
+        type="text"
+        placeholder="name"
+        class="input-field"
+        name="name"
+        id="name"
+        required
+      />
       <label for="name" class="input-label">Name</label>
     </div>
 
@@ -68,9 +78,9 @@
         </div>
       </div>
       <p>
-        Sulla base di quanto studiato in classe, spiega il concetto di popolo
-        in ottica romantica, facendo un paragone tra il Romanticismo e le
-        visioni delle correnti fondamentale del Primo Ottocento.
+        Sulla base di quanto studiato in classe, spiega il concetto di popolo in
+        ottica romantica, facendo un paragone tra il Romanticismo e le visioni
+        delle correnti fondamentale del Primo Ottocento.
       </p>
       <div>
         <h5>
@@ -81,7 +91,18 @@
         <h5><strong>Durata:</strong> 15min</h5>
       </div>
     </div>
-    
+
+    <!-- checkbox-group -->
+
+    <div class="checkbox-group">
+      <input type="checkbox" name="iti" id="iti" />
+      <label for="iti">
+        <i class="material-icons check">check</i>
+        <i class="material-icons add">add</i>
+        ITI
+      </label>
+    </div>
+
     <!-- ------------------------------------------ container ------------------------------------------------ -->
 
     <div class="container">
