--- a/home-coordinatore.html
+++ b/home-coordinatore.html
@@ -74,6 +74,7 @@
           <input type="submit" value="Applica" class="btn">
         </form>
       </div>
+      <div class="divider"></div>
       <div class="question-wrapper">
         <div>
           <div>
@@ -85,8 +86,8 @@
 
             <!-- Options -->
             <ul>
-              <li><span>Edit</span><i class="material-icons">create</i></li>
-              <li><span>Delete</span><i class="material-icons">delete</i></li>
+              <li><span>Modifica</span><i class="material-icons">create</i></li>
+              <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
             </ul>
           </div>
         </div>
@@ -115,8 +116,8 @@
 
             <!-- Options -->
             <ul>
-              <li><span>Edit</span><i class="material-icons">create</i></li>
-              <li><span>Delete</span><i class="material-icons">delete</i></li>
+              <li><span>Modifica</span><i class="material-icons">create</i></li>
+              <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
             </ul>
           </div>
         </div>
@@ -145,8 +146,8 @@
 
             <!-- Options -->
             <ul>
-              <li><span>Edit</span><i class="material-icons">create</i></li>
-              <li><span>Delete</span><i class="material-icons">delete</i></li>
+              <li><span>Modifica</span><i class="material-icons">create</i></li>
+              <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
             </ul>
           </div>
         </div>
