--- a/home.html
+++ b/home.html
@@ -79,8 +79,8 @@
 
             <!-- Options -->
             <ul>
-              <li><span>Edit</span><i class="material-icons">create</i></li>
-              <li><span>Delete</span><i class="material-icons">delete</i></li>
+              <li><span>Modifica</span><i class="material-icons">create</i></li>
+              <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
             </ul>
           </div>
         </div>
@@ -109,8 +109,8 @@
 
             <!-- Options -->
             <ul>
-              <li><span>Edit</span><i class="material-icons">create</i></li>
-              <li><span>Delete</span><i class="material-icons">delete</i></li>
+              <li><span>Modifica</span><i class="material-icons">create</i></li>
+              <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
             </ul>
           </div>
         </div>
@@ -139,8 +139,8 @@
 
             <!-- Options -->
             <ul>
-              <li><span>Edit</span><i class="material-icons">create</i></li>
-              <li><span>Delete</span><i class="material-icons">delete</i></li>
+              <li><span>Modifica</span><i class="material-icons">create</i></li>
+              <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
             </ul>
           </div>
         </div>
