modified the filteres

--- a/home-coordinatore.html
+++ b/home-coordinatore.html
@@ -59,8 +59,8 @@
             <option value="2">2 ITI</option>
             <option value="3">3 ITI</option>
           </select>
-          <select name="difficulty" id="difficulty">
-            <option value="placeholder">Difficoltà</option>
+          <select name="livello" id="livello">
+            <option value="placeholder">Livello</option>
             <option value="1">Facile</option>
             <option value="2">Medio</option>
             <option value="3">Difficile</option>
@@ -70,6 +70,11 @@
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
+          </select>
+          <select name="domande" id="domande">
+            <option value="placeholder">Domande</option>
+            <option value="mie">Mie</option>
+            <option value="tutte">Tutte</option>
           </select>
           <input type="submit" value="Applica" class="btn">
         </form>
@@ -86,6 +91,7 @@
 
             <!-- Options -->
             <ul>
+
               <li><span>Modifica</span><i class="material-icons">create</i></li>
               <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
             </ul>
