--- a/subject.html
+++ b/subject.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/basic.css" />
     <link rel="stylesheet" href="./css/components.css" />
+    <link rel="stylesheet" href="./css/subject.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <title>Exam Generator | Anni e Settori</title>
+    <title>Generazione Esami</title>
   </head>
   <body>
     <!-- Nav-Bar - START -->
@@ -36,83 +37,42 @@
     <!-- Nav-Bar - END -->
 
     <div class="container">
-      <div class="buttons-wrapper m-vertical">
-        <a href="#sectors-modal-add">
-          <button class="btn btn-secondary">
-            <i class="material-icons">add</i>
-            Aggiungi
-          </button>
-        </a>
-        <a href="#sectors-modal-modify">
-          <button class="btn btn-secondary">
-            <i class="material-icons">settings</i>
-            Modifica
-          </button>
-        </a>
-      </div>
-      <div class="flex">
-        <div class="flex-1">
-          <h1 class="text-center m-vertical">Settori ITI</h1>
-          <div class="flex-1 flex-wrapper">
-            <div class="text-block">
-              <span>1 ITI E</span>
-            </div>
-            <div class="text-block">
-              <span>2 ITI E</span>
-            </div>
-            <div class="text-block">
-              <span>3 ITI E</span>
-            </div>
-            <div class="text-block">
-              <span>1 ITI M</span>
-            </div>
-            <div class="text-block">
-              <span>2 ITI M</span>
-            </div>
-            <div class="text-block">
-              <span>3 ITI M</span>
-            </div>
-          </div>
+      <header class="justify-between align-center subject-header">
+        <div class="flex align-center">
+          <h3>Titolo:</h3>
+          <div class="m-horizontal"></div>
+          <h4>1 IPI E</h4>
         </div>
-        <div class="divider vertical"></div>
-        <div class="flex-1">
-          <h1 class="text-center m-vertical">Settori IPI</h1>
-          <div class="flex-1 flex-wrapper">
-            <div class="text-block">
-              <span>1 IPI E</span>
-            </div>
-            <div class="text-block">
-              <span>2 IPI E</span>
-            </div>
-            <div class="text-block">
-              <span>3 IPI E</span>
-            </div>
-            <div class="text-block">
-              <span>1 IPI M</span>
-            </div>
-            <div class="text-block">
-              <span>2 IPI M</span>
-            </div>
-            <div class="text-block">
-              <span>3 IPI M</span>
-            </div>
-          </div>
-        </div>
+        <a href="#subject-modal-edit">
+          <i class="material-icons">settings</i>
+        </a>
+      </header>
+      <div class="divider"></div>
+      <h3>Materie</h3>
+      <div class="flex-wrapper">
+        <div class="text-block">Italiano</div>
+        <div class="text-block">English</div>
+        <div class="text-block">Arabo</div>
+        <div class="text-block">Fisica</div>
+        <div class="text-block">Ginnastica</div>
+        <div class="text-block">Religione Musulmana</div>
+        <div class="text-block">Religione Cristiana</div>
+        <div class="text-block">Elettro</div>
       </div>
     </div>
 
-    <!-- sectors-modal-add - START -->
+    <!-- subject-modal-edit - START -->
 
-    <div id="sectors-modal-add" class="modal-wrapper">
+    <div id="subject-modal-edit" class="modal-wrapper">
       <a href="#" class="modal-background"></a>
-      <div class="modal sectors-modal">
-        <h1>Nuovi Settori</h1>
-        <form>
+      <div class="modal">
+        <h1>Modifica</h1>
+        <form action="">
           <h3>Titolo</h3>
-          <div class="flex-wrapper justify-between m-vertical">
+          <div class="flex-wrapper justify-between align-baseline">
             <select name="anno" id="anno">
               <option value="placeholder">Anno</option>
-              <option value="1">1</option>
+              <option value="1" selected>1</option>
               <option value="2">2</option>
               <option value="3">3</option>
               <option value="4">4</option>
@@ -120,7 +80,7 @@
             </select>
             <select name="tipo" id="tipo">
               <option value="iti">ITI</option>
-              <option value="IPI">IPI</option>
+              <option value="IPI" selected>IPI</option>
             </select>
             <div>
               <div class="input-group">
@@ -131,6 +91,7 @@
                   name="settore"
                   id="settore"
                   maxlength="2"
+                  value="E"
                 />
                 <label for="settore" class="input-label">Settore</label>
               </div>
@@ -140,7 +101,7 @@
           <h3>Materie</h3>
           <div class="flex-wrapper m-vertical">
             <div class="checkbox-group">
-              <input type="checkbox" name="italiano" id="italiano" />
+              <input type="checkbox" name="italiano" id="italiano" checked />
               <label for="italiano">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -148,7 +109,7 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="disegno" id="disegno" />
+              <input type="checkbox" name="disegno" id="disegno" checked />
               <label for="disegno">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -156,7 +117,7 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="elettro" id="elettro" />
+              <input type="checkbox" name="elettro" id="elettro" checked />
               <label for="elettro">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -180,7 +141,11 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="religione-cristiana" id="religione-cristiana" />
+              <input
+                type="checkbox"
+                name="religione-cristiana"
+                id="religione-cristiana"
+              />
               <label for="religione-cristiana">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -188,7 +153,12 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="religione-musulmana" id="religione-musulmana" />
+              <input
+                type="checkbox"
+                name="religione-musulmana"
+                id="religione-musulmana"
+                checked
+              />
               <label for="religione-musulmana">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -196,7 +166,7 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="ginnastica" id="ginnastica" />
+              <input type="checkbox" name="ginnastica" id="ginnastica" checked />
               <label for="ginnastica">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -204,7 +174,7 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="fisica" id="fisica" />
+              <input type="checkbox" name="fisica" id="fisica" checked />
               <label for="fisica">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -212,7 +182,11 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="sistemi-e-reti" id="sistemi-e-reti" />
+              <input
+                type="checkbox"
+                name="sistemi-e-reti"
+                id="sistemi-e-reti"
+              />
               <label for="sistemi-e-reti">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -260,7 +234,7 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="english" id="english" />
+              <input type="checkbox" name="english" id="english" checked />
               <label for="english">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -268,7 +242,7 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="arabo" id="arabo" />
+              <input type="checkbox" name="arabo" id="arabo" checked />
               <label for="arabo">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -276,7 +250,11 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="lab-sistemi-e-reti" id="lab-sistemi-e-reti" />
+              <input
+                type="checkbox"
+                name="lab-sistemi-e-reti"
+                id="lab-sistemi-e-reti"
+              />
               <label for="lab-sistemi-e-reti">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -284,7 +262,11 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="lab-informatica" id="lab-informatica" />
+              <input
+                type="checkbox"
+                name="lab-informatica"
+                id="lab-informatica"
+              />
               <label for="lab-informatica">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
@@ -298,6 +280,6 @@
       </div>
     </div>
 
-    <!-- sectors-modal-add - END -->
+    <!-- subject-modal-edit - END -->
   </body>
 </html>
