finished subjects.html

--- a/components.html
+++ b/components.html
@@ -217,10 +217,11 @@
       <div class="drawer">
         <div class="drawer-links">
           <a href="#" class="active">Mohamed Hussein</a>
-          <a href="./anni.html">Anni e Settori</a>
+          <a href="./classes.html">Anni e Settori</a>
           <a href="./home-coordinatore.html">Domande</a>
           <a href="./subjects.html">Materie</a>
-          <a href="#">Docenti</a>
+          <a href="./teachers.html">Docenti</a>
+          <a href="./generate.html">Genera Esame</a>
         </div>
       </div>
 
