added height animation to the slide containing teachers in teachers.html

--- a/teachers.html
+++ b/teachers.html
@@ -56,7 +56,7 @@
       <!-- TEACHERS-LIST -->
 
       <div class="dropdown-menu docenti">
-        <input type="checkbox" id="docenti" />
+        <input type="checkbox" id="docenti" checked />
         <label for="docenti">
           <h2 class="justify-between align-center">
             Docenti <i class="material-icons">keyboard_arrow_right</i>
@@ -178,7 +178,7 @@
         </div>
       </div>
       <div class="dropdown-menu coordinatori">
-        <input type="checkbox" id="coordinatori" />
+        <input type="checkbox" id="coordinatori" checked />
         <label for="coordinatori">
           <h2 class="justify-between align-center">
             Coordinatori <i class="material-icons">keyboard_arrow_right</i>
@@ -220,7 +220,7 @@
         </div>
       </div>
       <div class="dropdown-menu admins">
-        <input type="checkbox" id="admins" />
+        <input type="checkbox" id="admins" checked />
         <label for="admins">
           <h2 class="justify-between align-center">
             Admins <i class="material-icons">keyboard_arrow_right</i>
@@ -262,7 +262,7 @@
         </div>
       </div>
       <div class="dropdown-menu superadmins">
-        <input type="checkbox" id="superadmins" />
+        <input type="checkbox" id="superadmins" checked />
         <label for="superadmins">
           <h2 class="justify-between align-center">
             SuperAdmins <i class="material-icons">keyboard_arrow_right</i>
@@ -301,4 +301,5 @@
     <!-- drawer - END -->
   </body>
   <script src="./js/drawer.js"></script>
+  <script src="./js/teachers.js"></script>
 </html>
