finished teacher.html page -> to do the modals -- and added some css changes

--- a/class.html
+++ b/class.html
@@ -43,9 +43,9 @@
           <div class="m-horizontal"></div>
           <h4>1 IPI E</h4>
         </div>
-        <a href="#subject-modal-edit">
-          <i class="material-icons">settings</i>
-        </a>
+        <i class="material-icons">
+          <a href="#subject-modal-edit"> settings </a>
+        </i>
       </header>
       <div class="divider"></div>
       <h3>Materie</h3>
@@ -166,7 +166,12 @@
               </label>
             </div>
             <div class="checkbox-group">
-              <input type="checkbox" name="ginnastica" id="ginnastica" checked />
+              <input
+                type="checkbox"
+                name="ginnastica"
+                id="ginnastica"
+                checked
+              />
               <label for="ginnastica">
                 <i class="material-icons check">check</i>
                 <i class="material-icons add">add</i>
