--- a/subjects.html
+++ b/subjects.html
@@ -101,7 +101,7 @@
 
         <div class="card subject-card">
           <div class="justify-between align-center">
-            <div class="flex-wrapper align-baseline">
+            <div class="flex-wrapper align-center">
               <h3>Italiano</h3>
               <div class="m-horizontal"></div>
               <div class="text-block dark">2 ITI</div>
