--- a/questions-docente/domande.html
+++ b/questions-docente/domande.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/basic.css" />
     <link rel="stylesheet" href="../css/components.css" />
-    <link rel="stylesheet" href="../css/questions.css" />
+    <link rel="stylesheet" href="./questions.css" />
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -76,7 +77,7 @@
       <div class="divider"></div>
 
       <!-- questions - START -->
-      <div class="question-wrapper">
+      <div class="question-wrapper" id="questino-1">
         <div>
           <div>
             <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
@@ -87,8 +88,14 @@
 
             <!-- Options -->
             <ul>
-              <li><span>Modifica</span><i class="material-icons">create</i></li>
-              <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
+              <li>
+                <a href="#"> Modifica<i class="material-icons">create</i> </a>
+              </li>
+              <li>
+                <a href="#question-modal-delete">
+                  Rimuovi<i class="material-icons">delete</i>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -106,7 +113,7 @@
           <h5><strong>Durata:</strong> 15min</h5>
         </div>
       </div>
-      <div class="question-wrapper">
+      <div class="question-wrapper" id="questino-2">
         <div>
           <div>
             <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
@@ -117,8 +124,14 @@
 
             <!-- Options -->
             <ul>
-              <li><span>Modifica</span><i class="material-icons">create</i></li>
-              <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
+              <li>
+                <a href="#"> Modifica<i class="material-icons">create</i> </a>
+              </li>
+              <li>
+                <a href="#question-modal-delete">
+                  Rimuovi<i class="material-icons">delete</i>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -136,7 +149,7 @@
           <h5><strong>Durata:</strong> 15min</h5>
         </div>
       </div>
-      <div class="question-wrapper">
+      <div class="question-wrapper" id="questino-3">
         <div>
           <div>
             <h4>Unita 1 > Romanticismo > caratteristiche fondamentali</h4>
@@ -147,8 +160,14 @@
 
             <!-- Options -->
             <ul>
-              <li><span>Modifica</span><i class="material-icons">create</i></li>
-              <li><span>Rimuovi</span><i class="material-icons">delete</i></li>
+              <li>
+                <a href="#"> Modifica<i class="material-icons">create</i> </a>
+              </li>
+              <li>
+                <a href="#question-modal-delete">
+                  Rimuovi<i class="material-icons">delete</i>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -255,7 +274,9 @@
       </div>
     </div>
     <!-- drawer - END -->
+
+    <!-- drawer.js-link -->
+    <script src="../js/drawer.js"></script>
+    <script src="../js/questions.js"></script>
   </body>
-  <!-- drawer.js-link -->
-  <script src="../js/drawer.js"></script>
 </html>
