--- a/teachers-admin/teachers.html
+++ b/teachers-admin/teachers.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/basic.css" />
     <link rel="stylesheet" href="../css/components.css" />
     <link rel="stylesheet" href="./teachers.css" />
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -287,8 +288,8 @@
       </div>
     </div>
     <!-- drawer - END -->
+    <!-- drawer.js-link -->
+    <script src="../js/drawer.js"></script>
+    <script src="../js/slide-menu.js"></script>
   </body>
-  <!-- drawer.js-link -->
-  <script src="../js/drawer.js"></script>
-  <script src="../js/slide-menu.js"></script>
 </html>
