--- a/subjects-admin/subject.html
+++ b/subjects-admin/subject.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/basic.css" />
     <link rel="stylesheet" href="../css/components.css" />
+    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"></script>
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
@@ -373,8 +374,9 @@
       </div>
     </div>
     <!-- drawer - END -->
+    
+    <!-- drawer.js-link -->
+    <script src="../js/drawer.js"></script>
+    <script src="../js/slide-menu.js"></script>
   </body>
-  <!-- drawer.js-link -->
-  <script src="../js/drawer.js"></script>
-  <script src="../js/slide-menu.js"></script>
 </html>
